# localwork-hero

./: .gitignore  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Ralpplan.md  bug.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/PRPs/issues/: investigation-llama-inference-crash.md
.claude/PRPs/plans/completed/: phase-1-foundation.plan.md  phase-2-llm-integration.plan.md  phase-3-file-operations.plan.md
.claude/PRPs/prds/: localwork-hero.prd.md  open-cowork.prd.md
.claude/PRPs/reports/: phase-1-foundation-report.md  phase-2-llm-integration-report.md  phase-3-file-operations-report.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml.disabled
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/files/: mod.rs  operations.rs  permissions.rs  types.rs
src-tauri/src/inference/: llama.rs  mod.rs  tools.rs
src/components/chat/: ChatArea.tsx  ChatInput.tsx  MessageList.tsx
src/components/layout/: Layout.tsx  SettingsPanel.tsx  Sidebar.tsx
src/lib/: tauri.ts
