[package]
name = "localwork-hero"
version = "0.1.0"
description = "Local AI assistant for desktop automation"
authors = ["LocalWork Hero Contributors"]
edition = "2021"

[lib]
name = "localwork_hero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llama-cpp-2 = "0.1"
hf-hub = { version = "0.3", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
dirs = "5"
thiserror = "1"
ureq = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
uuid = { version = "1", features = ["v4"] }

# MCP plugin for AI-assisted debugging (debug builds only)
tauri-plugin-mcp = { git = "https://github.com/DaveDev42/tauri-plugin-mcp", branch = "main" }
log = "0.4"

[dev-dependencies]
tempfile = "3"

